[package]
name = "sp_wallet"
version = "0.1.0"
edition = "2021"

[lib]
name = "sp_wallet"
crate-type = ["cdylib"]  # This makes Rust produce a C-compatible .so library

[dependencies]
bitcoin = "0.30"
bip39 = "1.1"
secp256k1 = { version = "0.25", features = ["rand-std"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"
bdk = "0.30"
