[package]
name = "sp_wallet"
version = "0.1.0"
edition = "2021"

[lib]
name = "sp_wallet"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bitcoin = "0.30"
bip39 = "1.0.2"
secp256k1 = { version = "0.27", features = ["rand-std"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base58 = "0.2"  # For future base58 if needed
sha2 = "0.10"
bdk = "0.30"  # Match bitcoin version to avoid conflicts

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"